<resources>
    <string name="content_pornography">Content with Pornography</string>
    <string name="content_violence">Content with Violance</string>
    <string name="m01_01_not_collection">You do not have any collections.</string>
    <string name="m01_01_not_follow_anyone">You do not follow any users.</string>
    <string name="m01_01_please_login">Please operate after log in.</string>
    <string name="m01_01_start_follow">Start to follow</string>
    <string name="m02_01_data_parse_error">Lodding failed</string>
    <string name="report_reason">Reason to Report</string>
    <string name="u01_01_fb_not_email">This account can not be logged in without your email information.</string>
    <string name="u01_01_forgot_password">Forgot your password</string>
    <string name="u01_01_have_not_account">Don\'t have an account?</string>
    <string name="u01_01_login">Login</string>
    <string name="u01_01_login_data_error">The login information has error</string>
    <string name="u01_01_login_fail_id_pwd_error">The account or password is not valid. Please log in again or press "Forgot your password."</string>
    <string name="u01_01_not_signin">This account has not been applied yet.</string>
    <string name="u01_01_or">or</string>
    <string name="u01_01_password">Password</string>
    <string name="u01_02_activate_account">Please activate your account by your email address within 30 minutes; free to use all functions after you log in.</string>
    <string name="u01_02_alert_email_empty">Email cannot be blank</string>
    <string name="u01_02_alert_sign_up_fail_title">Sign Up is failed.</string>
    <string name="u01_02_alert_sign_up_success_title">Sign Up is successful.</string>
    <string name="u01_02_email_invalid">Invalid email address</string>
    <string name="u01_02_not_account">Already have an account?</string>
    <string name="u01_02_repassword">Confirm Password</string>
    <string name="u01_02_sign_up">Sign Up</string>
    <string name="u01_02_sign_up_check_fail_content">The information of Sign Up is wrong or has not been filled.</string>
    <string name="u01_02_sign_up_check_fail_title">Please confirm your Sign Up information.</string>
    <string name="u01_02_sign_up_connection_fail_error">Connection is discordant; please try it later.</string>
    <string name="u01_02_sign_up_email_fail_content">The Email Address has been used; please change it to another one.</string>
    <string name="u01_03_alert_forget_password_content">Please get your new password from your email address.</string>
    <string name="u01_03_enter_email">Enter your email address assoiciated with your account</string>
    <string name="u01_03_search_fail_no_account">The account is invalid.</string>
    <string name="u01_03_send">Send</string>
    <string name="u02_01_collections">COLLECTIONS</string>
    <string name="u02_01_copyright">Copyright © 2018 Sourcecode.tw Inc. All rights reserved</string>
    <string name="u02_01_logout">Logout</string>
    <string name="u02_01_my_drawings">MY DRAWINGS</string>
    <string name="u02_01_newest">NEWEST</string>
    <string name="u02_01_popular">POPULAR</string>
    <string name="u02_01_settings">SETTINGS</string>
    <string name="u02_02_content_other">Others</string>
    <string name="u02_02_cop_link">Copy Link</string>
    <string name="u02_02_report">Report</string>
    <string name="u02_02_report_fail">Report is failed; please try it again.</string>
    <string name="u02_02_report_reason_empty">Please fill in the reason.</string>
    <string name="u02_02_report_successful">Report is successful.</string>
    <string name="u02_02_report_work_title">Report Drawing</string>
    <string name="u02_02_share">Share</string>
    <string name="u02_03_add_comment">Add a comment ...</string>
    <string name="u02_03_add_comment_fail">Comment is failed to be made.</string>
    <string name="u02_03_add_comment_hint">Make a comment</string>
    <string name="u02_03_delete_comment">Delete</string>
    <string name="u02_03_first_comment">First to make a comment</string>
    <string name="u02_04_date">Date</string>
    <string name="u02_04_delete_content">Delete this drawing?</string>
    <string name="u02_04_delete_successful">Delete successfully</string>
    <string name="u02_04_delete_title">Delete</string>
    <string name="u02_04_edit_work">Edit your drawing</string>
    <string name="u02_05_not_match_work">No result found</string>
    <string name="u02_05_search">Search</string>
    <string name="u03_01_not_notice">You do not have any message.</string>
    <string name="u03_01_notice_title">Notice</string>
    <string formatted="false" name="u03_01_set_comment">%s commented : %s</string>
    <string formatted="false" name="u03_01_set_fb_friend">Your Facebook friend %s on Instagram</string>
    <string formatted="false" name="u03_01_set_following">%s  started following you.</string>
    <string formatted="false" name="u03_01_set_like">%s thumbed up to your drawing.</string>
    <string formatted="false" name="u03_01_set_share">%s share a drawing</string>
    <string name="u04_01_bgcolor_ticket_current_list">Background Color List</string>
    <string name="u04_01_brush_opacity">Brush Opacity</string>
    <string name="u04_01_brush_size">Brush Size</string>
    <string name="u04_01_color_ticket_current_list">Color List</string>
    <string name="u04_01_color_ticket_is_full">Color swatch storage is full. Please delete some of them.</string>
    <string name="u04_01_color_ticket_not_select">Please select color swatch and then remove it.</string>
    <string name="u04_01_exit_ask_save_sketch_title">Save your draft?</string>
    <string name="u04_01_exit_ask_sketch_content">Press "Yes", and the draft can be saved</string>
    <string name="u04_01_exit_ask_sketch_successful">Draft is saved successfully.</string>
    <string name="u04_01_exit_ask_update_sketch_title">Update your draft?</string>
    <string name="u04_01_grid_line_10x10">10 x 10 Grid</string>
    <string name="u04_01_grid_line_20x20">20 x 20 Grid</string>
    <string name="u04_01_grid_line_3x3">3 x 3 Grid</string>
    <string name="u04_01_grid_line_6x6">6 x 6 Grid</string>
    <string name="u04_01_grid_line_no_grid">Blank</string>
    <string name="u04_01_new_color_swatch">New Color Swatch</string>
    <string name="u04_01_press_below_button">Hey~Drawing is not available now, only can magnify your drawing board! Press the below button if you will keep drawing.</string>
    <string name="u04_01_press_play_with_empty">Please start to draw!</string>
    <string name="u04_01_saved_photo_album">Saved to Photo Album</string>
    <string name="u04_02_enter_description">Please enter brief description about your work; Add 「#」behind your description. Ex.</string>
    <string name="u04_02_enter_empty">Work description cannot be blank.</string>
    <string name="u04_02_share">Share</string>
    <string name="u04_02_work_description">Work Description</string>
    <string name="u04_03_privacy_setting">Privacy Setting</string>
    <string name="u04_03_private">Private</string>
    <string name="u04_03_public">Public</string>
    <string name="u04_03_public_friends">Public Only to Friends</string>
    <string name="u04_03_work_title">Work Title</string>
    <string name="u04_04_clear">Clear</string>
    <string name="u04_04_clear_finish">Draft has been cleared.</string>
    <string name="u04_04_clear_status">Press "Clear" and all the current motions will be deleted.</string>
    <string name="u04_04_clear_status_title">Do you want to clear the status?</string>
    <string name="u04_04_post_fail">Post failed</string>
    <string name="u04_04_post_successful">Post has been Successful</string>
    <string name="u04_05_play_end">Play Over</string>
    <string name="u04_05_play_speed">Playing Speed</string>
    <string name="u04_05_please_touch_play_start">Please press "PLAY" and then start to play.</string>
    <string name="u04_05_wait_this_part_finish">Please press it until finish the current stage.</string>
    <string name="u06_01_fan">Fans</string>
    <string name="u06_01_followers">Followers</string>
    <string name="u06_01_posts">Posts</string>
    <string name="u06_02_not_suggested_friend">No recommended friends\' list</string>
    <string name="u06_02_only_fb_or_twitter">"Recommend Friends\' List" is only available for accounts of Facebook or Twitter.</string>
    <string name="u06_02_suggested">SUGGESTED</string>
    <string name="u06_03_alert_save_fail_name_empty">User name cannot be blank.</string>
    <string name="u06_03_alert_save_length_max">The limit is 50 words.</string>
    <string name="u06_03_bio">Bio</string>
    <string name="u06_03_change_picture">Change Profile Picture</string>
    <string name="u06_03_edit_profile">Edit Profile</string>
    <string name="u06_03_gender">Gender</string>
    <string name="u06_03_gender_female">Female</string>
    <string name="u06_03_gender_male">Male</string>
    <string name="u06_03_gender_no_specified">No Specified</string>
    <string name="u06_03_phone_number">Phone number</string>
    <string name="u06_03_select_image">Select Picture</string>
    <string name="u06_04_account_setting_option">Account Setting Selection</string>
    <string name="u06_04_change_password">Change Password</string>
    <string name="u06_04_help_center">Help Center</string>
    <string name="u06_04_privacy_policy">Privacy Policy</string>
    <string name="u06_04_terms_of_service">Terms of Service</string>
    <string name="u06_05_current_password">Current password</string>
    <string name="u06_05_new_password">New password</string>
    <string name="u06_05_new_password_again">New password again</string>
    <string name="u06_05_new_password_empty">Please enter new password</string>
    <string name="u06_05_old_password_empty">Please enter old password</string>
    <string name="u06_05_old_password_unmatch">Old password is incorrect.</string>
    <string name="u06_05_password_update_fail">Password update is failed.</string>
    <string name="u06_05_password_update_successful">Password has been updated. Please back to log in page.</string>
    <string name="u06_05_verify">Verify</string>
    <string name="uc_a_few_days_ago">Days ago</string>
    <string name="uc_a_few_hours_ago">Hours ago</string>
    <string name="uc_a_few_minutes_ago">Minutes ago</string>
    <string name="uc_a_few_seconds_ago">Seconds ago</string>
    <string name="uc_alert_no">No</string>
    <string name="uc_alert_yes">Yes</string>
    <string name="uc_block">Block</string>
    <string name="uc_cancel">Cancel</string>
    <string name="uc_commit">OK</string>
    <string name="uc_connect_failed_title">Connection is failed.</string>
    <string name="uc_connection_failed">Please check your internet connection and then try it again.</string>
    <string name="uc_date_format">XX Year XX Month XX Date HH:MM</string>
    <string name="uc_day_before_yesterday">The day before yesterday</string>
    <string name="uc_delete">Delete</string>
    <string name="uc_email">E-mail Address</string>
    <string name="uc_follow">Follow</string>
    <string name="uc_following">Following</string>
    <string name="uc_hour">Hour</string>
    <string name="uc_just_now">Just now</string>
    <string name="uc_logout_msg">Confirm to log out?</string>
    <string name="uc_logout_title">Log out</string>
    <string name="uc_min">Minutes</string>
    <string name="uc_password_empty">Password cannot be blank</string>
    <string name="uc_password_invalid">Password requires 6 characters at least.</string>
    <string name="uc_password_unmatch">New password is not same as the verification.</string>
    <string name="uc_publish">Post</string>
    <string name="uc_redo_limit">Redo frequency is up limit.</string>
    <string name="uc_share">Share</string>
    <string name="uc_time_am">Morning</string>
    <string name="uc_time_pm">Afternoon</string>
    <string name="uc_username">User Name</string>
</resources>