<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout_paint_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50505050">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_border_dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/u04_04_clear_status_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/u04_04_clear_status"
            android:textAlignment="center"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/Grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_layout"
            android:orientation="horizontal"
            android:showDividers="middle">

            <Button
                android:id="@+id/btn_paint_back_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Transparent"
                android:text="@string/uc_cancel"
                android:textColor="@color/Blue" />

            <Button
                android:id="@+id/btn_paint_back_clean"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/Transparent"
                android:text="@string/u04_04_clear"
                android:textColor="@color/Blue" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>