<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_actitivy"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sctw.bonniedraw.activity.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar_signup"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logoImg"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/title_bar_img_logo" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/DivColor"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_signup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uc_username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uc_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:theme="@style/TextLabel"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/u01_01_password"
                android:inputType="textPassword"
                android:maxLength="15"
                app:passwordToggleTint="@color/White"
                app:passwordToggleTintMode="multiply" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout_signup_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:theme="@style/TextLabel"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_signup_repassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/u01_02_repassword"
                android:inputType="textPassword"
                android:maxLength="15"
                app:passwordToggleTint="@color/colorPrimaryDark"
                app:passwordToggleTintMode="multiply" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_get_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_login_email"
            android:text="@string/u01_02_sign_up"
            android:textColor="@color/White" />
    </LinearLayout>


    <FrameLayout
        android:id="@+id/fl_hint_signup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="#b2eeeeee">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/u01_02_not_account" />

        <TextView
            android:id="@+id/textView_singup_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/u01_01_login"
            android:textColor="@color/Blue" />
    </LinearLayout>

</FrameLayout>

</FrameLayout>
