<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_profile_top_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImg_profile_photo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textView_profile_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_profile_edit"
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/icon_edit_profile"
            android:text="@string/u06_03_edit_profile"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/textView_profile_user_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4sp"
            android:maxLines="5"
            android:padding="4dp"
            android:textAlignment="viewStart"
            android:textColor="@color/Black"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/textView_profile_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4sp"
            android:maxLines="5"
            android:padding="4dp"
            android:textAlignment="viewStart"
            android:textColor="@color/Blue"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_border"
            android:divider="@drawable/divider_layout"
            android:orientation="horizontal"
            android:padding="8dp"
            android:showDividers="middle|">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_profile_userworks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/u06_01_posts"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_profile_fans"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_profile_fans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/u06_01_followers"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_profile_follow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_profile_follows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uc_following"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
